Fix for alert wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,6 @@ a:hover {
   margin-top: 10px;
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-  white-space: nowrap;
   vertical-align: baseline;
 }
 
